# cogno-herald

./: LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cogno_herald/: __init__.py  ical.py  otp.py  ports.py  smtp.py  types.py
docs/: HOST_INTEGRATION.md
examples/: host_min.py
tests/integration/: test_smtp_live.py
tests/unit/: test_ical.py  test_otp.py  test_smtp.py  test_smtp_roundtrip.py
